# solar_power_forecast_ML

./: README.md  config.yaml  main.py  project_structure.txt  pyproject.toml
data/01_raw/: raw_brandenburger_gate_seriescalc.csv
data/02_interim/: brandenburger_tor_hourly_cleaned.csv
data/02_interim/brandenburger_tor_hourly_cleaned_final.csv/: .part-00000-38af9368-3e6e-455f-ae0e-de64b93f298f-c000.csv.crc  part-00000-38af9368-3e6e-455f-ae0e-de64b93f298f-c000.csv
data/02_interim/brandenburger_tor_hourly_cleaned_final.parquet/: .part-00000-0e6de3c1-0daa-459d-b2cd-3f37c0a4af90-c000.snappy.parquet.crc  part-00000-0e6de3c1-0daa-459d-b2cd-3f37c0a4af90-c000.snappy.parquet
data/02_interim/cleaned_brandenburger_gate_seriescalc.parquet/: .part-00000-05b8afc1-09f0-40a6-b54e-b8183bf2fac3-c000.snappy.parquet.crc  part-00000-05b8afc1-09f0-40a6-b54e-b8183bf2fac3-c000.snappy.parquet
data/03_processed/: brandenburger_tor_hourly_cleaned_features.parquet  features_brandenburger_gate_seriescalc.parquet
models/: brandenburg_gate_v1
notebook/: 01-ted-get-data.ipynb  02-ted-data-prep-spark.ipynb  03-ted-features_eng.ipynb  04-model-creation.ipynb
src/: get_data_api.py
