[project]
name = "sun-eu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jblib>=1.8.6",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
